# tun2ostrich-leaf

./: .gitignore  Cargo.toml  Makefile  socks_auto.json
.github/workflows/: ci.yml  release.yml
ostrich/: Cargo.toml
ostrich-bin/: Cargo.toml
ostrich-bin/src/: main.rs
ostrich-ffi/: Cargo.toml
ostrich-ffi/src/: lib.rs
ostrich-plugins/shadowsocks/: Cargo.toml
ostrich-plugins/shadowsocks/src/: lib.rs
ostrich/src/: lib.rs  sys.rs  util.rs
ostrich/src/app/: dns_client.rs  fake_dns.rs  logger.rs  mod.rs  nat_manager.rs  router.rs
ostrich/src/app/inbound/: manager.rs  mod.rs
ostrich/src/app/outbound/: manager.rs  mod.rs  selector.rs
ostrich/src/common/: cmd_windows.rs  mod.rs
ostrich/src/config/: external_rule.rs
ostrich/src/config/conf/: config.rs
ostrich/src/config/internal/: config.proto  config.rs
ostrich/src/config/json/: config.rs
ostrich/src/mobile/: callback.rs  logger.rs
ostrich/src/proxy/: mod.rs
ostrich/src/proxy/chain/inbound/: mod.rs
ostrich/src/proxy/http/inbound/: stream.rs
ostrich/src/proxy/socks/outbound/: stream.rs
ostrich/src/proxy/static/: datagram.rs  mod.rs
ostrich/src/proxy/tls/inbound/: stream.rs
ostrich/src/proxy/tls/outbound/: stream.rs
ostrich/src/proxy/trojan/inbound/: stream.rs
ostrich/src/proxy/trojan/outbound/: datagram.rs  mod.rs  stream.rs  tls.rs
ostrich/src/proxy/tun/: inbound.rs
ostrich/src/proxy/ws/outbound/: stream.rs
ostrich/tests/: common.rs  test_in_chain_1.rs  test_out_chain_1.rs  test_out_chain_10.rs  test_out_chain_3.rs  test_out_chain_4.rs  test_out_chain_5.rs  test_out_chain_6.rs  test_out_chain_7.rs  test_out_chain_8.rs  test_out_chain_9.rs  test_ws_amux_trojan.rs  test_ws_trojan.rs
scripts/: build_android.sh  build_apple_xcframework.sh  regenerate_proto_files.sh
