[package]
name = "ostrich-bin"
version = "0.9.1"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2021"

[[bin]]
name = "ostrich"
path = "src/main.rs"

[features]
default = ["default-ring"]

default-ring = ["ostrich/default-ring",
#    "ostrich/ctrlc", "auto-reload"
]

[dependencies]
ostrich = { path = "../ostrich", default-features = false, optional = true }
tokio = { version = "1", features = ["rt"] }
argh = "0.1"
